--- a/apps/website/src/pages/docs/components/data-display/command/theming.mdx
+++ b/apps/website/src/pages/docs/components/data-display/command/theming.mdx
@@ -2,3 +2,25 @@
 id: command
 scope: theming
 ---
+
+## Theming
+
+The `Command` component uses the `SuiCommand` key in the theme.
+
+### Default theme
+
+```tsx
+export const commandTheme = {
+  baseStyle: {
+    fontSize: 'xs',
+    '[role=tooltip] > &': {
+      ms: 1,
+      _before: {
+        content: '"•"',
+        me: 1,
+        fontSize: 'xs',
+      },
+    },
+  },
+}
+```
