--- a/apps/website/src/pages/docs/components/data-display/data-table/theming.mdx
+++ b/apps/website/src/pages/docs/components/data-display/data-table/theming.mdx
@@ -2,3 +2,8 @@
 id: bdata-table
 scope: theming
 ---
+
+## Theming
+
+The `DataTable` component is a multipart component that composes a Chakra UI `Table` component.
+Check out the Chakra UI [Table](https://chakra-ui.com/docs/data-display/table) component for more information.
