--- a/apps/website/src/pages/docs/components/feedback/snackbar/theming.mdx
+++ b/apps/website/src/pages/docs/components/feedback/snackbar/theming.mdx
@@ -2,3 +2,9 @@
 id: snackbar
 scope: theming
 ---
+
+## Theming
+
+The `Snackbar` component renders a `Alert` component with the `snackbar` variant.
+
+- [Alert theming docs](https://chakra-ui.com/docs/components/alert/theming)
