--- a/apps/website/src/pages/docs/components/layout/toolbar/theming.mdx
+++ b/apps/website/src/pages/docs/components/layout/toolbar/theming.mdx
@@ -2,3 +2,7 @@
 id: toolbar
 scope: theming
 ---
+
+## Theming
+
+The `Toolbar` component composes a `ButtonGroup`, you can find the theming API available on the Chakra UI [ButtonGroup](https://chakra-ui.com/docs/components/button/theming) component page.
