--- a/apps/website/src/pages/docs/components/overlay/menu-dialog/theming.mdx
+++ b/apps/website/src/pages/docs/components/overlay/menu-dialog/theming.mdx
@@ -2,3 +2,10 @@
 id: menu-dialog
 scope: theming
 ---
+
+## Theming
+
+The `MenuDialog` composes the `Modal` and `Menu` components.
+
+- [Modal theming documentation](https://chakra-ui.com/docs/components/modal/theming)
+- [Menu theming documentation](https://chakra-ui.com/docs/components/menu/theming)
