--- a/apps/website/src/pages/docs/components/overlay/responsive-menu/theming.mdx
+++ b/apps/website/src/pages/docs/components/overlay/responsive-menu/theming.mdx
@@ -2,3 +2,10 @@
 id: responsive-menu
 scope: theming
 ---
+
+## Theming
+
+The `ResponsiveMenu` composes the `Modal` and `Menu` components.
+
+- [Modal theming documentation](https://chakra-ui.com/docs/components/modal/theming)
+- [Menu theming documentation](https://chakra-ui.com/docs/components/menu/theming)
